# raindrop-io-cli

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
raindropiocli/: cli.py
raindropiocli/commands/: __init__.py  create.py  help.py  manage.py  search.py  view_edit.py
raindropiocli/models/: create_request.py  event_loop.py  raindrop_state.py  search_state.py
tests/: conftest.py  test_cli.py  test_commands_create.py  test_models_raindropstate.py
